re PR fortran/31917 ([4.1 only] GFORTRAN_CONVERT_UNIT is ignored)

2007-05-23  Tobias Burnus <burnus@net-b.de>

        PR fortran/31917
        Backport from trunk.
        * runtime/environ.c (mark_range): Fix setting default convert unit.

From-SVN: r124984